@@ -714,6 +714,60 @@ public class KafkaMessageListenerContainer<K, V> // NOSONAR line count
 							Collections.singletonList(new TopicPartition(topic, partition)));
 				}
 
+				@Override
+				public void seekRelative(String topic, int partition, long offset, boolean toCurrent) {
+					TopicPartition topicPart = new TopicPartition(topic, partition);
+					Long whereTo = null;
+					Consumer<K, V> consumerToSeek = ListenerConsumer.this.consumer;
+					if (offset >= 0) {
+						whereTo = computeForwardWhereTo(offset, toCurrent, topicPart, consumerToSeek);
+					}
+					else {
+						whereTo = computeBackwardWhereTo(offset, toCurrent, topicPart, consumerToSeek);
+					}
+					if (whereTo != null) {
+						consumerToSeek.seek(topicPart, whereTo);
+					}
+				}
+
+				@Nullable
+				private Long computeForwardWhereTo(long offset, boolean toCurrent, TopicPartition topicPart,
+						Consumer<K, V> consumerToSeek) {
+
+					Long start;
+					if (!toCurrent) {
+						Map<TopicPartition, Long> beginning = consumerToSeek
+								.beginningOffsets(Collections.singletonList(topicPart));
+						start = beginning.get(topicPart);
+					}
+					else {
+						start = consumerToSeek.position(topicPart);
+					}
+					if (start != null) {
+						return start + offset;
+					}
+					return null;
+				}
+
+				@Nullable
+				private Long computeBackwardWhereTo(long offset, boolean toCurrent, TopicPartition topicPart,
+						Consumer<K, V> consumerToSeek) {
+
+					Long end;
+					if (!toCurrent) {
+						Map<TopicPartition, Long> endings = consumerToSeek
+								.endOffsets(Collections.singletonList(topicPart));
+						end = endings.get(topicPart);
+					}
+					else {
+						end = consumerToSeek.position(topicPart);
+					}
+					if (end != null) {
+						return end + offset;
+					}
+					return null;
+				}
+
 			};
 			if (idle) {
 				((ConsumerSeekAware) ListenerConsumer.this.genericListener).onIdleContainer(current, callback);
@@ -1484,14 +1538,25 @@ public class KafkaMessageListenerContainer<K, V> // NOSONAR line count
 				traceSeek(offset);
 				try {
 					SeekPosition position = offset.getPosition();
+					Long whereTo = offset.initialOffset();
 					if (position == null) {
-						this.consumer.seek(offset.topicPartition(), offset.initialOffset());
+						if (offset.isRelativeToCurrent()) {
+							whereTo += this.consumer.position(offset.topicPartition());
+						}
+						this.consumer.seek(offset.topicPartition(), whereTo);
 					}
 					else if (position.equals(SeekPosition.BEGINNING)) {
 						this.consumer.seekToBeginning(Collections.singletonList(offset.topicPartition()));
+						if (whereTo != null) {
+							this.consumer.seek(offset.topicPartition(), whereTo);
+						}
 					}
 					else {
 						this.consumer.seekToEnd(Collections.singletonList(offset.topicPartition()));
+						if (whereTo != null) {
+							whereTo += this.consumer.position(offset.topicPartition());
+							this.consumer.seek(offset.topicPartition(), whereTo);
+						}
 					}
 				}
 				catch (Exception e) {
@@ -1633,6 +1698,20 @@ public class KafkaMessageListenerContainer<K, V> // NOSONAR line count
 		public void seekToEnd(String topic, int partition) {
 			this.seeks.add(new TopicPartitionInitialOffset(topic, partition, SeekPosition.END));
 		}
+
+		@Override
+		public void seekRelative(String topic, int partition, long offset, boolean toCurrent) {
+			if (toCurrent) {
+				this.seeks.add(new TopicPartitionInitialOffset(topic, partition, offset, toCurrent));
+			}
+			else if (offset >= 0) {
+				this.seeks.add(new TopicPartitionInitialOffset(topic, partition, offset, SeekPosition.BEGINNING));
+			}
+			else {
+				this.seeks.add(new TopicPartitionInitialOffset(topic, partition, offset, SeekPosition.END));
+			}
+		}
+
 
 		@Override
 		public String toString() {
